tests/pass/from_import.py
# importing dataclass
from dataclasses import dataclass
