tests/fail/import.py
# 'dataclasses.something' could not be resolved
from dataclasses import something
